--- a/app.json
+++ b/app.json
@@ -1,67 +1,33 @@
 {
   "expo": {
-    "name": "Zenith Meal Delivery",
+    "name": "Zenith - Meal Delivery & Fitness",
     "slug": "zenith-meal-delivery",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
-    "scheme": "zenith",
+    "scheme": "zenithmeal",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
     "ios": {
-      "icon": "./assets/images/icon.png",
-      "supportsTablet": true,
-      "bundleIdentifier": "com.zenith.mealdelivery"
+      "supportsTablet": true
     },
     "android": {
-      "icon": "./assets/images/icon.png",
-      "package": "com.zenith.mealdelivery",
       "adaptiveIcon": {
-        "foregroundImage": "./assets/images/adaptive-icon.png",
+        "foregroundImage": "./assets/images/icon.png",
         "backgroundColor": "#10B981"
-      },
-      "permissions": [
-        "ACCESS_FINE_LOCATION",
-        "ACCESS_COARSE_LOCATION",
-        "CAMERA",
-        "NOTIFICATIONS"
-      ]
+      }
     },
     "web": {
       "bundler": "metro",
-      "output": "static",
+      "output": "single",
       "favicon": "./assets/images/favicon.png"
     },
     "plugins": [
-      "expo-router",
-      [
-        "expo-splash-screen",
-        {
-          "image": "./assets/images/splash-icon.png",
-          "imageWidth": 200,
-          "resizeMode": "contain",
-          "backgroundColor": "#10B981"
-        }
-      ],
-      [
-        "expo-location",
-        {
-          "locationAlwaysAndWhenInUsePermission": "This app needs access to location to show nearby restaurants and track deliveries."
-        }
-      ],
-      [
-        "expo-camera",
-        {
-          "cameraPermission": "This app needs access to camera to scan QR codes and take photos."
-        }
-      ],
-      [
-        "expo-notifications",
-        {
-          "icon": "./assets/images/notification-icon.png",
-          "color": "#10B981"
-        }
-      ]
+      "expo-router", 
+      "expo-font", 
+      "expo-web-browser",
+      "expo-camera",
+      "expo-location"
     ],
     "experiments": {
       "typedRoutes": true
