--- a/app.json
+++ b/app.json
@@ -27,7 +27,8 @@
       "expo-font", 
       "expo-web-browser",
       "expo-camera",
-      "expo-location"
+      "expo-location",
+      "expo-notifications"
     ],
     "experiments": {
       "typedRoutes": true
