--- a/package.json
+++ b/package.json
@@ -1,52 +1,66 @@
 {
-  "name": "zenith-meal-delivery",
+  "name": "food-delivery-app",
   "main": "expo-router/entry",
   "version": "1.0.0",
-  "private": true,
   "scripts": {
-    "dev": "EXPO_NO_TELEMETRY=1 expo start",
-    "build:web": "expo export --platform web",
-    "lint": "expo lint"
+    "start": "expo start",
+    "android": "expo start --android",
+    "ios": "expo start --ios",
+    "web": "expo start --web",
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "dependencies": {
-    "@expo/vector-icons": "^14.1.0",
-    "@lucide/lab": "^0.1.2",
-    "@react-navigation/bottom-tabs": "^7.2.0",
-    "@react-navigation/native": "^7.0.14",
-    "@supabase/supabase-js": "^2.39.7",
-    "expo": "^53.0.0",
-    "expo-blur": "~14.1.3",
-    "expo-camera": "~16.1.5",
-    "expo-constants": "~17.1.3",
-    "expo-font": "~13.2.2",
-    "expo-haptics": "~14.1.3",
-    "expo-linear-gradient": "~14.1.3",
-    "expo-linking": "~7.1.3",
-    "expo-location": "~18.1.3",
-    "expo-notifications": "~0.30.3",
-    "expo-router": "~5.0.2",
-    "expo-splash-screen": "~0.30.6",
-    "expo-status-bar": "~2.2.2",
-    "expo-symbols": "~0.4.3",
-    "expo-system-ui": "~5.0.5",
-    "expo-web-browser": "~14.1.5",
-    "lucide-react-native": "^0.475.0",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
-    "react-native": "0.79.1",
-    "react-native-chart-kit": "^6.12.0",
-    "react-native-gesture-handler": "~2.24.0",
-    "react-native-reanimated": "~3.17.4",
-    "react-native-safe-area-context": "5.3.0",
-    "react-native-screens": "~4.10.0",
-    "react-native-svg": "15.11.2",
-    "react-native-url-polyfill": "^2.0.0",
-    "react-native-web": "^0.20.0",
-    "react-native-webview": "13.13.5"
+    "expo": "~50.0.0",
+    "react": "18.2.0",
+    "react-native": "0.73.0",
+    "expo-router": "~3.4.0",
+    "react-native-safe-area-context": "4.8.2",
+    "react-native-screens": "~3.29.0",
+    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/bottom-tabs": "^6.5.11",
+    "@react-navigation/native-stack": "^6.9.17",
+    "@supabase/supabase-js": "^2.38.4",
+    "expo-secure-store": "~12.7.1",
+    "expo-location": "~16.5.1",
+    "expo-camera": "~14.0.5",
+    "expo-media-library": "~15.7.1",
+    "expo-image-manipulator": "~11.8.0",
+    "expo-file-system": "~16.0.6",
+    "react-native-maps": "1.10.0",
+    "react-native-maps-directions": "^1.9.0",
+    "react-native-svg": "14.1.0",
+    "react-native-signature-canvas": "^4.7.2",
+    "react-native-encrypted-storage": "^4.0.3",
+    "expo-crypto": "~12.8.1",
+    "expo-haptics": "~12.8.1",
+    "expo-permissions": "~14.4.0",
+    "lucide-react-native": "^0.263.1",
+    "@react-native-async-storage/async-storage": "1.21.0",
+    "react-native-gesture-handler": "~2.14.0",
+    "react-native-reanimated": "~3.6.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.25.2",
-    "@types/react": "~19.0.10",
-    "typescript": "~5.8.3"
-  }
+    "@babel/core": "^7.20.0",
+    "@types/react": "~18.2.45",
+    "@types/react-native": "^0.72.8",
+    "@typescript-eslint/eslint-plugin": "^6.0.0",
+    "@typescript-eslint/parser": "^6.0.0",
+    "eslint": "^8.0.0",
+    "eslint-plugin-react": "^7.33.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "jest": "^29.2.1",
+    "jest-expo": "~50.0.1",
+    "typescript": "^5.1.3",
+    "@testing-library/react-native": "^12.4.2",
+    "@testing-library/jest-native": "^5.4.3"
+  },
+  "jest": {
+    "preset": "jest-expo",
+    "setupFilesAfterEnv": ["@testing-library/jest-native/extend-expect"],
+    "transformIgnorePatterns": [
+      "node_modules/(?!((jest-)?react-native|@react-native(-community)?)|expo(nent)?|@expo(nent)?/.*|@expo-google-fonts/.*|react-navigation|@react-navigation/.*|@unimodules/.*|unimodules|sentry-expo|native-base|react-native-svg)"
+    ]
+  },
+  "private": true
 }
