--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "1.0.0",
   "scripts": {
     "start": "expo start",
+    "dev": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
@@ -21,7 +22,7 @@
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native-stack": "^6.9.17",
     "@supabase/supabase-js": "^2.38.4",
-    "expo-secure-store": "~12.7.1",
+    "expo-secure-store": "~12.8.1",
     "expo-location": "~16.5.1",
     "expo-camera": "~14.0.5",
     "expo-media-library": "~15.0.0",
