--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "expo-crypto": "~14.1.5",
     "expo-haptics": "~14.1.4",
     "expo-permissions": "~14.4.0",
+    "expo-notifications": "~0.29.10",
     "lucide-react-native": "^0.518.0",
     "@react-native-async-storage/async-storage": "2.2.0",
     "react-native-gesture-handler": "~2.26.0",
