--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-native-safe-area-context": "5.4.1",
     "react-native-screens": "~4.11.1",
     "@react-navigation/native": "^7.1.13",
+    "react-native-chart-kit": "^7.0.0",
     "@react-navigation/bottom-tabs": "^7.3.17",
     "@react-navigation/native-stack": "^7.3.18",
     "@supabase/supabase-js": "^2.50.0",
