--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "19.1.0",
     "react-native": "0.80.0",
     "expo-router": "~5.1.0",
+    "expo-linking": "~7.1.0",
     "react-native-safe-area-context": "5.4.1",
     "react-native-screens": "~4.11.1",
     "@react-navigation/native": "^7.1.13",
