--- a/package.json
+++ b/package.json
@@ -12,57 +12,59 @@
     "test:watch": "jest --watch"
   },
   "dependencies": {
-    "expo": "~50.0.0",
-    "react": "19.1.0",
-    "react-native": "0.74.6",
-    "expo-router": "~3.5.0",
-    "expo-linking": "~7.1.0",
-    "expo-image": "~1.12.0",
-    "react-native-safe-area-context": "5.4.1",
-    "react-native-screens": "~4.11.1",
-    "@react-navigation/native": "^7.1.13",
-    "react-native-chart-kit": "^6.12.0",
+    "@react-native-async-storage/async-storage": "^1.21.0",
     "@react-navigation/bottom-tabs": "^7.3.17",
+    "@react-navigation/native": "^7.1.13",
     "@react-navigation/native-stack": "^7.3.18",
     "@supabase/supabase-js": "^2.50.0",
-    "expo-secure-store": "~14.2.3",
-    "expo-location": "~18.1.5",
-    "expo-camera": "~16.1.8",
-    "expo-media-library": "~17.1.7",
-    "expo-image-manipulator": "~13.1.7",
-    "expo-file-system": "~18.1.10",
-    "react-native-maps": "1.24.3",
-    "react-native-maps-directions": "^1.9.0",
-    "react-native-svg": "15.12.0",
-    "react-native-signature-canvas": "^4.7.4",
-    "react-native-encrypted-storage": "^4.0.3",
-    "expo-crypto": "~14.1.5",
-    "expo-haptics": "~14.1.4",
+    "expo": "~53.0.0",
+    "expo-camera": "~14.1.3",
+    "expo-crypto": "~12.8.1",
+    "expo-file-system": "~16.0.9",
+    "expo-haptics": "~12.8.1",
+    "expo-image": "~1.10.6",
+    "expo-image-manipulator": "~11.8.0",
+    "expo-linking": "~6.2.2",
+    "expo-location": "~16.5.5",
+    "expo-media-library": "~15.9.2",
+    "expo-notifications": "^0.27.8",
     "expo-permissions": "~14.4.0",
-    "expo-notifications": "~0.29.10",
+    "expo-router": "~3.4.10",
+    "expo-secure-store": "~12.8.1",
     "lucide-react-native": "^0.518.0",
-    "@react-native-async-storage/async-storage": "2.2.0",
-    "react-native-gesture-handler": "~2.26.0",
-    "react-native-reanimated": "~3.18.0"
+    "react": "^18.2.0",
+    "react-native": "^0.73.6",
+    "react-native-chart-kit": "^6.12.0",
+    "react-native-encrypted-storage": "^4.0.3",
+    "react-native-gesture-handler": "~2.14.0",
+    "react-native-maps": "^1.10.0",
+    "react-native-maps-directions": "^1.9.0",
+    "react-native-reanimated": "~3.6.2",
+    "react-native-safe-area-context": "^4.8.2",
+    "react-native-screens": "~3.29.0",
+    "react-native-signature-canvas": "^4.7.4",
+    "react-native-svg": "^14.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.27.4",
-    "@types/react": "~19.1.8",
+    "@testing-library/jest-native": "^5.4.3",
+    "@testing-library/react-native": "^13.2.0",
+    "@types/react": "~18.2.45",
     "@types/react-native": "^0.73.0",
     "@typescript-eslint/eslint-plugin": "^8.34.1",
     "@typescript-eslint/parser": "^8.34.1",
     "eslint": "^9.29.0",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
-    "jest": "^30.0.2",
-    "jest-expo": "~53.0.7",
-    "typescript": "^5.8.3",
-    "@testing-library/react-native": "^13.2.0",
-    "@testing-library/jest-native": "^5.4.3"
+    "jest": "^29.7.0",
+    "jest-expo": "~50.0.4",
+    "typescript": "^5.8.3"
   },
   "jest": {
     "preset": "jest-expo",
-    "setupFilesAfterEnv": ["@testing-library/jest-native/extend-expect"],
+    "setupFilesAfterEnv": [
+      "@testing-library/jest-native/extend-expect"
+    ],
     "transformIgnorePatterns": [
       "node_modules/(?!((jest-)?react-native|@react-native(-community)?)|expo(nent)?|@expo(nent)?/.*|@expo-google-fonts/.*|react-navigation|@react-navigation/.*|@unimodules/.*|unimodules|sentry-expo|native-base|react-native-svg)"
     ]
