--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
     "test:watch": "jest --watch"
   },
   "dependencies": {
+    "@expo/metro-config": "^0.20.15",
     "@react-native-async-storage/async-storage": "^1.21.0",
     "@react-navigation/bottom-tabs": "^7.3.17",
     "@react-navigation/native": "^7.1.13",
     "@react-navigation/native-stack": "^7.3.18",
     "@supabase/supabase-js": "^2.50.0",
-    "expo": "~53.0.0",
+    "ajv": "^8.17.1",
+    "ajv-keywords": "^5.1.0",
+    "expo": "~53.0.12",
     "expo-camera": "~14.1.3",
     "expo-crypto": "~12.8.1",
     "expo-file-system": "~16.0.9",
@@ -27,23 +30,24 @@
     "expo-linking": "~6.2.2",
     "expo-location": "~16.5.5",
     "expo-media-library": "~15.9.2",
-    "expo-notifications": "^0.27.8",
+    "expo-notifications": "~0.27.8",
     "expo-permissions": "~14.4.0",
     "expo-router": "~3.4.10",
     "expo-secure-store": "~12.8.1",
     "lucide-react-native": "^0.518.0",
-    "react": "^18.2.0",
-    "react-native": "^0.73.6",
+    "metro": "^0.79.1",
+    "react": "18.2.0",
+    "react-native": "0.73.6",
     "react-native-chart-kit": "^6.12.0",
     "react-native-encrypted-storage": "^4.0.3",
     "react-native-gesture-handler": "~2.14.0",
-    "react-native-maps": "^1.10.0",
+    "react-native-maps": "1.10.0",
     "react-native-maps-directions": "^1.9.0",
     "react-native-reanimated": "~3.6.2",
-    "react-native-safe-area-context": "^4.8.2",
+    "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-signature-canvas": "^4.7.4",
-    "react-native-svg": "^14.1.0"
+    "react-native-svg": "14.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.27.4",
