--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@supabase/supabase-js": "^2.50.0",
     "ajv": "^8.17.1",
     "ajv-keywords": "^5.1.0",
-    "expo": "~53.0.12",
+    "expo": "^53.0.12",
     "expo-camera": "~14.1.3",
     "expo-crypto": "~12.8.1",
     "expo-file-system": "~16.0.9",
@@ -35,9 +35,9 @@
     "expo-router": "~3.4.10",
     "expo-secure-store": "~12.8.1",
     "lucide-react-native": "^0.518.0",
-    "metro": "^0.79.1",
-    "react": "18.2.0",
-    "react-native": "0.73.6",
+    "metro": "^0.82.4",
+    "react": "^19.1.0",
+    "react-native": "^0.79.4",
     "react-native-chart-kit": "^6.12.0",
     "react-native-encrypted-storage": "^4.0.3",
     "react-native-gesture-handler": "~2.14.0",
