--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "expo-permissions": "~14.4.0",
     "expo-router": "~5.1.0",
     "expo-secure-store": "~14.2.3",
+    "expo-splash-screen": "~0.29.14",
     "lucide-react-native": "^0.518.0",
     "metro": "^0.82.4",
     "react": "^19.0.0",
