--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@expo/metro-config": "^0.20.15",
     "@react-native-async-storage/async-storage": "^2.1.2",
+    "expo-constants": "~16.1.7",
     "react-native-web": "~0.20.0",
     "@react-navigation/bottom-tabs": "^7.3.17",
     "@react-navigation/native": "^7.1.13",
@@ -55,6 +56,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.27.4",
+    "@types/node": "^20.10.5",
     "@testing-library/jest-native": "^5.4.3",
     "@testing-library/react-native": "^13.2.0",
     "@types/react": "~19.0.10",
