--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "zenith-app",
-  "version": "1.0.0",
+  "name": "food-delivery-app",
   "main": "expo-router/entry",
+  "version": "1.0.0",
   "scripts": {
     "start": "expo start",
     "dev": "expo start",
@@ -10,47 +10,80 @@
     "web": "expo start --web",
     "test": "jest",
     "lint": "eslint . --ext .ts,.tsx,.js,.jsx",
-    "type-check": "tsc --noEmit"
+    "type-check": "tsc --noEmit",
+    "test:watch": "jest --watch"
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.0",
-    "@react-navigation/bottom-tabs": "^6.5.11",
+    "@expo/metro-config": "^0.20.15",
+    "@react-native-async-storage/async-storage": "^2.1.2",
+    "expo-constants": "~17.1.6",
+    "react-native-web": "~0.20.0",
     "@react-navigation/drawer": "^6.6.6",
-    "@react-navigation/native": "^6.1.9",
-    "@react-navigation/native-stack": "^6.9.17",
-    "@supabase/supabase-js": "^2.39.0",
-    "expo": "~51.0.0",
-    "expo-constants": "~16.0.0",
-    "expo-font": "~12.0.0",
-    "expo-linking": "~6.3.0",
-    "expo-location": "~17.0.0",
-    "expo-router": "~3.5.0",
-    "expo-secure-store": "~13.0.0",
-    "expo-splash-screen": "~0.27.0",
-    "expo-status-bar": "~1.12.0",
-    "expo-system-ui": "~3.0.0",
-    "expo-web-browser": "~13.0.0",
-    "lucide-react-native": "^0.294.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-native": "0.74.5",
-    "react-native-gesture-handler": "~2.16.0",
-    "react-native-maps": "1.14.0",
-    "react-native-reanimated": "~3.10.0",
-    "react-native-safe-area-context": "4.10.5",
-    "react-native-screens": "3.31.1",
-    "react-native-svg": "15.2.0",
-    "react-native-web": "~0.19.10",
+
+    "@react-navigation/bottom-tabs": "^7.3.17",
+    "@react-navigation/native": "^7.1.13",
+    "@react-navigation/native-stack": "^7.3.18",
+    "@supabase/supabase-js": "^2.50.0",
+    "ajv": "^8.17.1",
+    "ajv-keywords": "^5.1.0",
+    "expo": "^53.0.12",
+    "expo-camera": "~16.1.8",
+    "expo-crypto": "~14.1.5",
+    "expo-file-system": "~18.1.10",
+    "expo-haptics": "~14.1.4",
+    "expo-image": "~2.3.0",
+    "expo-image-manipulator": "~13.1.7",
+    "expo-linking": "~7.1.5",
+    "expo-status-bar": "~2.2.3",
+    "expo-system-ui": "~5.0.9",
+    "expo-web-browser": "~14.2.0",
+
+
+    "expo-font": "~13.3.1",
+    "expo-location": "~18.1.5",
+    "expo-media-library": "~17.1.7",
+    "expo-notifications": "~0.31.3",
+    "expo-permissions": "~14.4.0",
+    "expo-router": "~5.1.0",
+    "expo-secure-store": "~14.2.3",
+    "expo-splash-screen": "~0.30.9",
+    "lucide-react-native": "^0.518.0",
+    "metro": "^0.82.4",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "react-native": "^0.79.4",
+    "react-native-chart-kit": "^6.12.0",
+    "react-native-encrypted-storage": "^4.0.3",
+    "react-native-gesture-handler": "~2.24.0",
+    "react-native-maps": "1.20.1",
+    "react-native-maps-directions": "^1.9.0",
+    "react-native-reanimated": "~3.17.4",
+    "react-native-safe-area-context": "5.4.0",
+    "react-native-screens": "~4.11.1",
+    "react-native-signature-canvas": "^4.7.4",
+    "react-native-svg": "15.11.2",
+    "react-native-webview": "^13.13.5",
     "socket.io-client": "^4.7.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
-    "@types/react": "~18.2.45",
-    "@types/react-native": "~0.73.0",
-    "eslint": "^8.56.0",
-    "eslint-config-expo": "^7.0.0",
+    "@babel/core": "^7.27.4",
+    "@types/node": "^20.10.5",
+    "@testing-library/jest-native": "^5.4.3",
+    "@testing-library/react-native": "^13.2.0",
+    "@types/react": "~19.0.10",
+    "@types/react-native": "^0.73.0",
+    "@typescript-eslint/eslint-plugin": "^8.34.1",
+    "@typescript-eslint/parser": "^8.34.1",
+    "eslint": "^9.29.0",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^5.2.0",
     "jest": "^29.7.0",
-    "typescript": "~5.3.3"
+    "jest-expo": "~53.0.7",
+    "eslint-config-expo": "~9.2.0",
+    "typescript": "^5.8.3"
+
   },
+ 
   "private": true
 }
