--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-      "lint": "eslint . --ext .ts,.tsx,.js,.jsx",
+    "lint": "eslint . --ext .ts,.tsx,.js,.jsx",
     "type-check": "tsc --noEmit",
     "test:watch": "jest --watch",
     "test": "jest --watchAll"
@@ -16,18 +16,13 @@
   "jest": {
     "preset": "jest-expo"
   },
-  
   "dependencies": {
-    "@expo/vector-icons": "^14.0.0",
     "@expo/metro-config": "^0.20.15",
+    "@expo/vector-icons": "^14.0.0",
     "@react-native-async-storage/async-storage": "^2.1.2",
-    "expo-constants": "~17.1.6",
-    "react-native-web": "~0.20.0",
-    "@react-navigation/drawer": "^6.6.6",
-
-    "@react-navigation/bottom-tabs": "^7.3.17",
     "@react-native-community/netinfo": "11.4.1",
-
+    "@react-navigation/bottom-tabs": "^7.3.17",
+    "@react-navigation/drawer": "^6.6.6",
     "@react-navigation/native": "^7.1.13",
     "@react-navigation/native-stack": "^7.3.18",
     "@supabase/supabase-js": "^2.50.0",
@@ -35,18 +30,14 @@
     "ajv-keywords": "^5.1.0",
     "expo": "^53.0.12",
     "expo-camera": "~16.1.8",
+    "expo-constants": "~17.1.6",
     "expo-crypto": "~14.1.5",
     "expo-file-system": "~18.1.10",
+    "expo-font": "~13.3.1",
     "expo-haptics": "~14.1.4",
     "expo-image": "~2.3.0",
     "expo-image-manipulator": "~13.1.7",
     "expo-linking": "~7.1.5",
-    "expo-status-bar": "~2.2.3",
-    "expo-system-ui": "~5.0.9",
-    "expo-web-browser": "~14.2.0",
-
-
-    "expo-font": "~13.3.1",
     "expo-location": "~18.1.5",
     "expo-media-library": "~17.1.7",
     "expo-notifications": "~0.31.3",
@@ -54,6 +45,9 @@
     "expo-router": "~5.1.0",
     "expo-secure-store": "~14.2.3",
     "expo-splash-screen": "~0.30.9",
+    "expo-status-bar": "~2.2.3",
+    "expo-system-ui": "~5.0.9",
+    "expo-web-browser": "~14.2.0",
     "lucide-react-native": "^0.518.0",
     "metro": "^0.82.4",
     "react": "19.0.0",
@@ -69,32 +63,30 @@
     "react-native-screens": "~4.11.1",
     "react-native-signature-canvas": "^4.7.4",
     "react-native-svg": "15.11.2",
+    "react-native-web": "~0.20.0",
     "react-native-webview": "^13.13.5",
     "socket.io-client": "^4.7.2"
   },
   "devDependencies": {
     "@babel/core": "^7.27.4",
-    "@types/node": "^20.10.5",
     "@testing-library/jest-native": "^5.4.3",
-    "@types/jest": "^29.5.12",
-
     "@testing-library/react-native": "^13.2.0",
+    "@types/jest": "^29.5.12",
+    "@types/node": "^20.10.5",
     "@types/react": "~19.0.10",
     "@types/react-native": "^0.73.0",
+    "@types/react-test-renderer": "^18.0.7",
     "@typescript-eslint/eslint-plugin": "^8.34.1",
     "@typescript-eslint/parser": "^8.34.1",
-    "@types/react-test-renderer": "^18.0.7",
-
+    "babel-plugin-module-resolver": "^5.0.2",
     "eslint": "^9.29.0",
+    "eslint-config-expo": "~9.2.0",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
     "jest": "^29.7.0",
     "jest-expo": "~53.0.7",
-    "eslint-config-expo": "~9.2.0",
     "react-test-renderer": "18.2.0",
     "typescript": "^5.8.3"
-
   },
- 
   "private": true
 }
