--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@expo/metro-config": "^0.20.15",
     "@expo/vector-icons": "^14.0.0",
     "@react-native-async-storage/async-storage": "^2.1.2",
-    "@react-native-community/netinfo": "11.4.1",
+    "@react-native-community/netinfo": "^11.4.1",
     "@react-navigation/bottom-tabs": "^7.3.17",
     "@react-navigation/drawer": "^6.6.6",
     "@react-navigation/native": "^7.1.13",
