--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@react-native-community/netinfo": "^11.4.1",
     "@react-navigation/bottom-tabs": "^7.3.17",
     "@react-navigation/drawer": "^6.6.6",
+    "date-fns": "^3.0.6",
+    "zustand": "^4.4.7",
     "@react-navigation/native": "^7.1.13",
     "@react-navigation/native-stack": "^7.3.18",
     "@supabase/supabase-js": "^2.50.0",
